syntax = "proto3";

package quasar;

message PullFiltersRequest {}

message PullFiltersResponse {
    bytes AttenuateBloomFilter = 1;
}

message PushFiltersRequest {
    bytes AttenuateBloomFilter = 1;
}

message PushFiltersResponse {}

message Message {

    enum MessageType {
        PULL_FILTER_REQUEST = 0;
        PULL_FILTER_RESPONSE = 1;
        PUSH_FILTER_REQUEST = 2;
        PUSH_FILTER_RESPONE = 3;
    }

    MessageType type = 1;
    string requestID = 2;

    PullFiltersRequest pullFiltersRequest = 3;
    PullFiltersResponse pullFiltersResponse = 4;

    PushFiltersRequest pushFilterRequest = 5;
    PushFiltersResponse pushFilterResponse = 6;

}